Fixes point and adds custom scrollbar.

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -31,7 +31,7 @@ body {
 }
 
 %point {
-	@extend point;
+	cursor: pointer;
 }
 
 @mixin flexColCenter {
@@ -100,7 +100,7 @@ button.btn {
 	padding: 1rem 3rem;
 	font-size: 1rem;
 	font-family: $Livvic;
-	@extend point;
+	@extend %point;
 }
 
 span {
