--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -37,7 +37,7 @@
 		position: absolute;
 		top: 0;
 		width: 90%;
-		@extend point;
+		@extend %point;
 		display: none;
 		outline: 0;
 
@@ -86,7 +86,7 @@
 			&:hover {
 				color: $midnight;
 				transition: 0.5s;
-				@extend point;
+				@extend %point;
 
 				@include mq(750px) {
 					background-color: transparent !important;
